EFKStack/Kibana1/Ingress_rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress-myservicea","namespace":"someapp"},"spec":{"ingressClassName":"nginx","rules":[{"host":"myservicea.foo.org","http":{"paths":[{"backend":{"service":{"name":"myservicea","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2022-11-10T03:32:33Z"
  generation: 1
  name: ingress-kibana
  namespace: kube-logging
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.22bcentos.exchangeweb.net
    http:
      paths:
      - backend:
          service:
            name: kibana
            port:
              number: 80
        path: /
        pathType: Prefix
#status:
 # loadBalancer:
   # ingress:
   # - hostname: a6c9847e9e5254f228a99ef56f5fe653-082811063cbd5e70.elb.us-east-1.amazonaws.com
